--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
 	<main class="container" id="app">
 		<h1 class="page-title">Admin</h1>
 		<div id="login">
-			<p>Enter admin password:</p>
+			<p>_endjvJ6!d:</p>
 			<input id="pw" class="input" type="password" placeholder="Password">
 			<button id="loginBtn" class="theme-toggle">Login</button>
 		</div>
@@ -408,4 +408,5 @@
 	</script>
 </body>
 </html>
+
 
